ODE CHANGELOG
-------------

the rules for this file:
  * entries are sorted newest-first.
  * summarize sets of changes - dont reproduce every CVS log comment here.
  * don't ever delete anything.
  * keep the format consistent (79 char width, M/D/Y date format).

------------------------------------------------------------------------------
11/10/2014 Oleh Derevenko
        * Floating point division by zero in capsule-ray collision routine 
          in case if the ray axis was parallel the cylinder and the ray started
          from within it fixed (issue #26)

11/08/2014 Oleh Derevenko
        * Threading support has been extended to complete implementation 
          of QuickStep

10/29/2014 Daniel K. O.
        * Added dJointSetDBallDistance

10/19/2014 Oleh Derevenko
        * Built-in threading implementation compilation fixed for OSX
          (clock_gettime() is missing from the system - reported by Bram)

08/10/2014 Oleh Derevenko
        * Declarations of dWorld[Get/Set]AutoDisableLinearAverageThreshold and
          dWorld[Get/Set]AutoDisableAngularAverageThreshold have been removed 
          from public headers (were orphaned since rev.1052)

07/16/2014 Oleh Derevenko
        * Two fixes by Francesco Cat applied (fixes for mistakes made during
          code style improvements in the past)
		 
02/27/14 Daniel K. O.
        * Added dODE_VERSION macro to public headers (issue #24).

02/11/14 Daniel K. O.
        * Added dJointGetHinge2Angle2 (issue #12).

02/07/14 Daniel K. O.
        * Added dWorldSetData/dWorldGetData (issue #21).

01/31/14 Daniel K. O.
        * Applied patch #185: Stable, implicit gyroscopic forces.

01/27/14 Daniel K. O.
        * Fixed cylinder AABB computation.

01/25/14 Daniel K. O.
        * Removed ALLOCA calls from dHashSpace; it should not depend
          on stack size limits anymore.

12/06/13 Daniel K. O.
        * Applied patch #181: fix some bugs in AMotor joint.
        * Applied patch #186: fix some bugs in PU joint.